--- a/index.html
+++ b/index.html
@@ -3,23 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luratok - Gatinhos Fofos</title>
+    <title>Luratok - Melhore seu dia com gatinhos fofos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffe4e1;
+            color: #333;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #ff69b4;
+            color: white;
+            padding: 20px;
+            font-size: 2em;
+        }
+        h1 {
+            color: #ff1493;
+            margin-top: 20px;
+        }
+        p {
+            color: #555;
+            font-size: 1.2em;
+        }
+        .video-container {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .footer {
+            background-color: #ff69b4;
+            color: white;
+            padding: 10px;
+            font-size: 1em;
+        }
+        .footer i {
+            margin-right: 10px;
+        }
+    </style>
 </head>
-<body style="font-family: Arial, sans-serif; background-color: #ffe4e1; color: #333; text-align: center; margin: 0; padding: 0;">
+<body>
 
-<header style="background-color: #ff69b4; color: white; padding: 15px; font-size: 2em;">
-    Luratok
-</header>
+<header>Luratok</header>
 
-<h1 style="color: #ff1493; margin: 20px 0;">
-    Melhore seu dia com gatinhos fofos
-</h1>
-<p>#Cute Cat Videos</p>
+<h1>MELHORE SEU DIA COM GATINHOS FOFOS.</h1>
+<p>#CUTE CAT VIDEOS</p>
 
-<div style="margin: 20px 0;">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LMD6MqwErzc?si=iMu8VqvortHV-9_t" title="Gatinho 1" frameborder="0" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ewxKgcqr4eA?si=dq4Fl6Wfq6M0yFvY" title="Gatinho 2" frameborder="0" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/cu71GJlMHzY?si=Mmyyt_bpv4JzPlVm" title="Gatinho 3" frameborder="0" allowfullscreen></iframe>
+<div class="video-container">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LMD6MqwErzc?si=iMu8VqvortHV-9_t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ewxKgcqr4eA?si=dq4Fl6Wfq6M0yFvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/cu71GJlMHzY?si=Mmyyt_bpv4JzPlVm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+
+<div class="footer">
+    <p><i class="fas fa-cat"></i> Feito com amor por Luratok</p>
 </div>
 
 </body>
